# e-llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.prod.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/config/: config.yaml
data/config/profiles/: default.yaml  gemma4-26b-moe.yaml  gemma4.yaml  qwen3coder.yaml
docker/: compose.dev.yml  entrypoint.sh  nginx.conf
docs/: future.md
src/assets/: theme.css
src/e_llm/: main.py
src/e_llm/adapters/: huggingface.py  llamacpp.py
src/e_llm/core/: health.py  logger.py  settings.py  state.py
src/e_llm/models/: agent.py  bench.py  download.py  server.py  system.py
src/e_llm/operational/: agents.py  bench.py  controller.py  downloads.py  models.py  monitor.py  server.py  system.py
src/e_llm/pages/: bench.py  config.py  test.py
tests/integration/: conftest.py
tests/integration/e_llm/: test_api.py  test_health.py
tests/unit/: conftest.py
tests/unit/e_llm/adapters/: test_huggingface.py  test_llamacpp.py
tests/unit/e_llm/core/: test_settings.py
tests/unit/e_llm/models/: test_download.py  test_server.py
tests/unit/e_llm/operational/: test_controller.py  test_downloads.py  test_models.py  test_server.py  test_system.py
